fixed websubmit job list cursor and module detail panel z-index

--- a/cravat/webstore/webstore.css
+++ b/cravat/webstore/webstore.css
@@ -278,7 +278,7 @@ input:checked + .store-switch-slider:before {
     width: 80%;
     height: 80%;
     margin: auto;
-    z-index: 3;
+    z-index: 300;
     background-color: white;
     left: 0;
     right: 0;
